--- a/project/package.json
+++ b/project/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --port 4216",
-    "build": "ng build --prod --base-href \"https://randomcoggles.github.io/curriculum/\" --output-path=../dist",
+    "build": "ng build --prod --base-href \"https://randomcoggles.github.io/curriculum/dist\" --output-path=../dist",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
