--- a/project/angular.json
+++ b/project/angular.json
@@ -17,8 +17,9 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "deployUrl": "/dist/",
             "outputPath": "dist",
-            "index": "src/index.html",
+            "index": "../index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
