--- a/curriculum/package.json
+++ b/curriculum/package.json
@@ -18,6 +18,7 @@
     "@angular/forms": "~11.2.5",
     "@angular/platform-browser": "~11.2.5",
     "@angular/platform-browser-dynamic": "~11.2.5",
+    "@angular/platform-server": "~11.2.5",
     "@angular/router": "~11.2.5",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
